Create .event-details class for salon.html event info section.

--- a/website/salon.html
+++ b/website/salon.html
@@ -12,7 +12,7 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
     </div>
 </section>
 
-<section class="section section-full" style="background: var(--white); padding-top: 40px;">
+<section class="section section-full bg-white" style="padding-top: 40px;">
     <div class="section-inner container-sm prose">
         <p class="intro">TEDxBreckenridge Salon events are intimate, conversational gatherings that bring together curious minds to explore fascinating topics. Unlike our main annual event, Salons are smaller by design—creating space for deeper discussion, questions, and genuine connection.</p>
 
@@ -37,14 +37,14 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
                 <p>Why does water boil at a lower temperature in the mountains? Why do cakes rise too fast—or not at all? And how do professional chefs adapt their techniques when cooking at 9,000 feet?</p>
                 <p>In this TEDxBreckenridge Salon, the culinary team from <a href="https://coloradomtn.edu/" target="_blank" rel="noopener noreferrer">Colorado Mountain College</a> explores how altitude changes the rules of cooking and baking—and what it takes to master flavor, texture, and technique in the High Rockies. Through a short talk, practical insights, and guided discussion, we'll dive into the science behind high-elevation kitchens and the creative adaptations that make great food possible up here.</p>
                 <p>Come ready to think, ask questions, and leave with ideas you'll actually use in your own kitchen.</p>
-                <div style="margin-top: 32px; padding: 24px; background: var(--sand); border-radius: 8px;">
-                    <p style="margin: 0 0 16px 0; color: var(--charcoal);"><strong>January 15, 2026 • 6:00 PM</strong><br>
+                <div class="event-details">
+                    <p><strong>January 15, 2026 • 6:00 PM</strong><br>
                     EVO3 Workspace<br>
                     620 E Main St #6, Frisco, CO 80443</p>
-                    <div style="margin: 16px 0;">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3076.7747895686373!2d-106.09786892396915!3d39.57455871140394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876a76cd7c2c0f63%3A0x7b7c0a3e3e0e0e0e!2s620%20Main%20St%20%236%2C%20Frisco%2C%20CO%2080443!5e0!3m2!1sen!2sus!4v1234567890123!5m2!1sen!2sus" width="100%" height="300" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map showing EVO3 Workspace location at 620 E Main St #6, Frisco, CO 80443"></iframe>
+                    <div class="event-details-map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3076.7747895686373!2d-106.09786892396915!3d39.57455871140394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876a76cd7c2c0f63%3A0x7b7c0a3e3e0e0e0e!2s620%20Main%20St%20%236%2C%20Frisco%2C%20CO%2080443!5e0!3m2!1sen!2sus!4v1234567890123!5m2!1sen!2sus" width="100%" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Map showing EVO3 Workspace location at 620 E Main St #6, Frisco, CO 80443"></iframe>
                     </div>
-                    <p style="margin: 0; color: var(--charcoal);"><strong>Suggested donation:</strong> $10<br>
+                    <p><strong>Suggested donation:</strong> $10<br>
                     <em>Ideas should be accessible to everyone. If cost is a barrier, join us anyway — your curiosity matters most.</em></p>
                 </div>
                 <div class="btn-group mt-32">
@@ -57,9 +57,9 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
 </section>
 
 <!-- Upcoming Salons Schedule -->
-<section class="section section-full" style="background: var(--cream);">
+<section class="section section-full bg-cream">
     <div class="section-inner container-sm">
-        <div class="section-header" style="text-align: center; margin-bottom: 48px;">
+        <div class="section-header section-header-centered">
             <div class="section-eyebrow">2026 Season</div>
             <h2 class="section-title">Upcoming Salon Events</h2>
         </div>
@@ -67,9 +67,9 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
         <div class="grid-gap-24">
             <!-- Salon 1 -->
             <div class="card-white">
-                <h3 style="color: var(--ted-red);">Elevated Cuisine: The Science and Art of Cooking at Altitude</h3>
+                <h3 class="text-red">Elevated Cuisine: The Science and Art of Cooking at Altitude</h3>
                 <p>Explore how altitude changes the rules of cooking and baking with the culinary team from Colorado Mountain College.</p>
-                <p class="text-stone" style="font-size: 0.875rem; margin-top: var(--space-16);"><strong>January 15, 2026 • 6:00 PM</strong><br>EVO3 Workspace, Frisco</p>
+                <p class="text-stone card-meta"><strong>January 15, 2026 • 6:00 PM</strong><br>EVO3 Workspace, Frisco</p>
                 <div class="mt-24">
                     <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude" class="btn btn-primary">Get Tickets</a>
                 </div>
@@ -79,28 +79,28 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
             <div class="card-white">
                 <h3 class="text-charcoal">March Salon</h3>
                 <p>Topic and details to be announced.</p>
-                <p class="text-stone" style="font-size: 0.875rem; margin-top: var(--space-16);"><strong>March 2026</strong><br>Date and location TBD</p>
+                <p class="text-stone card-meta"><strong>March 2026</strong><br>Date and location TBD</p>
             </div>
 
             <!-- Salon 3 - April -->
             <div class="card-white">
                 <h3 class="text-charcoal">April Salon</h3>
                 <p>Topic and details to be announced.</p>
-                <p class="text-stone" style="font-size: 0.875rem; margin-top: var(--space-16);"><strong>April 2026</strong><br>Date and location TBD</p>
+                <p class="text-stone card-meta"><strong>April 2026</strong><br>Date and location TBD</p>
             </div>
 
             <!-- Salon 4 - June -->
             <div class="card-white">
                 <h3 class="text-charcoal">June Salon</h3>
                 <p>Topic and details to be announced.</p>
-                <p class="text-stone" style="font-size: 0.875rem; margin-top: var(--space-16);"><strong>June 2026</strong><br>Date and location TBD</p>
+                <p class="text-stone card-meta"><strong>June 2026</strong><br>Date and location TBD</p>
             </div>
 
             <!-- Salon 5 - August -->
             <div class="card-white">
                 <h3 class="text-charcoal">August Salon</h3>
                 <p>Topic and details to be announced.</p>
-                <p class="text-stone" style="font-size: 0.875rem; margin-top: var(--space-16);"><strong>August 2026</strong><br>Date and location TBD</p>
+                <p class="text-stone card-meta"><strong>August 2026</strong><br>Date and location TBD</p>
             </div>
         </div>
 
