Increase bg contrast on homepage.

--- a/website/index.html
+++ b/website/index.html
@@ -35,7 +35,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 </section>
 
 <!-- Save the Date Section -->
-<section class="section section-full bg-cream section-bordered" id="main-event">
+<section class="section section-full bg-sand section-bordered" id="main-event">
     <div class="save-date-container">
         <div class="save-date-image">
             <img src="{{ '/assets/images/events/save-the-date-event-photo.jpg' | relative_url }}" alt="TEDxBreckenridge 2026 main event at the Riverwalk Center - Save the date for October 3, 2026" loading="lazy">
@@ -88,7 +88,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 </section>
 
 <!-- Featured Talks Section -->
-<section class="section section-full bg-cream section-bordered" id="featured-talks">
+<section class="section section-full bg-sand section-bordered" id="featured-talks">
     <div class="section-inner container">
         <div class="section-header section-header-centered">
             <div class="section-eyebrow">Featured Talks</div>
@@ -130,7 +130,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 </section>
 
 <!-- Support Section -->
-<section class="section support-section bg-cream section-bordered" id="support">
+<section class="section support-section bg-white section-bordered" id="support">
     <div class="section-header">
         <div class="section-eyebrow">Get Involved</div>
         <h2 class="section-title">Help Make TEDxBreckenridge 2026 Happen</h2>
