--- a/website/pages/talks.html
+++ b/website/pages/talks.html
@@ -6,12 +6,14 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 ---
 
 <div class="page">
-  <div class="page-header">
-    <div class="page-header-content">
-      <h1>Watch Talks</h1>
-      <p>Explore ideas from past TEDxBreckenridge events</p>
-    </div>
-  </div>
+  <nav class="year-nav" aria-label="Jump to year">
+    <span class="year-nav-label">Jump to:</span>
+    <a href="#metamorphosis" class="year-nav-link">2025</a>
+    <a href="#instinct" class="year-nav-link">2023</a>
+    <a href="#integrate" class="year-nav-link">2022</a>
+    <a href="#expand" class="year-nav-link">2021</a>
+    <a href="#connection" class="year-nav-link">2020</a>
+  </nav>
 
 <!-- 2025: METAMORPHOSIS -->
 <section class="section talks-year-section bg-white" id="metamorphosis">
