Fix mobile styles on the salon page.

--- a/website/salon.html
+++ b/website/salon.html
@@ -4,8 +4,10 @@ title: TEDxBreckenridge Salon
 description: TEDxBreckenridge Salon events are small, conversational gatherings designed to spark curiosity and build connections. Join us for the next Salon on January 15, 2026 featuring Elevated Cuisine - The Science and Art of Cooking at Altitude.
 ---
 
+<div class="page">
+
 <!-- What is a Salon -->
-<section class="page-header" style="padding-top: 160px;">
+<section class="page-header">
     <div class="page-header-content">
         <div class="section-eyebrow">TEDxBreckenridge Salon</div>
         <h1>Small Gatherings, Big Ideas</h1>
@@ -110,3 +112,5 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
         </div>
     </div>
 </section>
+
+</div>
