Fix heading on the salon page.

--- a/website/salon.html
+++ b/website/salon.html
@@ -7,12 +7,12 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
 <div class="page">
 
 <!-- What is a Salon -->
-<section class="page-header">
+<div class="page-header">
     <div class="page-header-content">
-        <div class="section-eyebrow">TEDxBreckenridge Salon</div>
-        <h1>Small Gatherings, Big Ideas</h1>
+        <h1 class="page-title">TEDxBreckenridge Salon</h1>
+        <p class="page-subtitle">Small Gatherings, Big Ideas</p>
     </div>
-</section>
+</div>
 
 <section class="section section-full bg-white" style="padding-top: 40px;">
     <div class="section-inner container-sm prose">
