Fix external links to point to internal pages.

--- a/website/index.html
+++ b/website/index.html
@@ -146,7 +146,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
             <div class="support-icon" aria-hidden="true">□</div>
             <h3>Volunteer</h3>
             <p>Join our planning team! We're just getting started and welcome community members with all skills and backgrounds.</p>
-            <a href="https://www.tedxbreckenridge.com/volunteer" target="_blank" rel="noopener noreferrer" class="support-link" aria-label="Get involved as a volunteer (opens in new window)">Get involved</a>
+            <a href="/volunteer/" class="support-link">Get involved</a>
         </div>
         <div class="support-card">
             <div class="support-icon" aria-hidden="true">◆</div>
@@ -208,7 +208,7 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 
             <div class="cta-block">
                 <p>Interested in becoming a sponsor?</p>
-                <a href="https://tedxbreckenridge.com/sponsor" target="_blank" rel="noopener noreferrer" class="btn btn-primary" aria-label="Learn About Sponsorship Opportunities (opens in new window)">Learn About Sponsorship Opportunities</a>
+                <a href="/sponsor/" class="btn btn-primary">Learn About Sponsorship Opportunities</a>
             </div>
         </div>
     </div>
