Feature Erfa's talk on the homepage.

--- a/website/index.html
+++ b/website/index.html
@@ -107,10 +107,10 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 
             <div class="video-card">
                 <div class="video-wrapper">
-                    <iframe src="https://www.youtube.com/embed/iIWd6FbQqtM" title="How asking for help saved me and can change mental health culture - Drew Petersen TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                    <iframe src="https://www.youtube.com/embed/Z2hWJzp4oqA" title="The play paradigm: unlocking potential through joy - Erfa Alani TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
                 </div>
-                <h3>How asking for help saved me & can change mental health culture</h3>
-                <p>Drew Petersen</p>
+                <h3>The play paradigm: unlocking potential through joy</h3>
+                <p>Erfa Alani</p>
             </div>
 
             <div class="video-card">
