--- a/website/index.html
+++ b/website/index.html
@@ -7,21 +7,21 @@ description: Join us for inspiring talks and meaningful connections in Summit Co
 <!-- Hero Section -->
 <section class="hero">
     <div class="hero-content">
-        <div class="hero-eyebrow">TEDxBreckenridge Salon • {{ site.salon.date }}</div>
-        <h1 class="hero-title hero-title-lg">{{ site.salon.title }}</h1>
-        <p class="hero-description">{{ site.salon.description }}</p>
+        <div class="hero-eyebrow">TEDxBreckenridge Salon • January 15, 2026</div>
+        <h1 class="hero-title hero-title-lg">Elevated Cuisine: The Science and Art of Cooking at Altitude</h1>
+        <p class="hero-description">Join the culinary team from <a href="https://coloradomtn.edu/campuses/breckenridge-dillon/">Colorado Mountain College</a> as they explore how altitude changes the rules of cooking and baking—and what it takes to master flavor, texture, and technique in the High Rockies.</p>
         <div class="hero-meta">
             <div class="hero-meta-item">
                 <span class="hero-meta-label">Location</span>
-                <span class="hero-meta-value">{{ site.salon.venue }}</span>
+                <span class="hero-meta-value">EVO3 Workspace</span>
             </div>
             <div class="hero-meta-item">
                 <span class="hero-meta-label">Time</span>
-                <span class="hero-meta-value">{{ site.salon.time }}</span>
+                <span class="hero-meta-value">6:00 PM</span>
             </div>
             <div class="hero-meta-item">
                 <span class="hero-meta-label">Price</span>
-                <span class="hero-meta-value">{{ site.salon.price }}</span>
+                <span class="hero-meta-value">$10 suggested donation</span>
             </div>
         </div>
         <div class="hero-actions">
