Rework mailchimp emails to be built in jekyll.

--- a/website/_emails/2026-01-salon-elevated-cuisine.html
+++ b/website/_emails/2026-01-salon-elevated-cuisine.html
@@ -1,3 +1,9 @@
+---
+title: "TEDxBreckenridge Salon: Elevated Cuisine (Jan 15)"
+date: 2026-01-01
+subject: "You're invited — TEDxBreckenridge Salon Jan 15"
+description: "Salon event invitation for Elevated Cuisine"
+---
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
