Add volunteer opportunities.
...to the January Salon email and slides.

--- a/_emails/2026-01-salon-elevated-cuisine.html
+++ b/_emails/2026-01-salon-elevated-cuisine.html
@@ -201,16 +201,10 @@ description: "Salon event invitation for Elevated Cuisine"
                                 We'd love to see you there.
                             </p>
 
-                            <!-- Secondary CTA -->
-                            <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin-bottom: 32px;">
-                                <tr>
-                                    <td align="center">
-                                        <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude" target="_blank" style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: bold; color: #e62b1e; text-decoration: underline;">
-                                            Reserve Your Spot →
-                                        </a>
-                                    </td>
-                                </tr>
-                            </table>
+                            <!-- Volunteer photographer request -->
+                            <p style="margin: 0 0 24px 0; font-family: Helvetica, Arial, sans-serif; font-size: 15px; line-height: 1.6; color: #6B6B6B;">
+                                <strong>Looking for a volunteer photographer!</strong> We're searching for someone to help capture our Salon events. If you're interested, email us at <a href="mailto:ideas@tedxbreckenridge.com" style="color: #4A7470; text-decoration: underline;">ideas@tedxbreckenridge.com</a> or fill out our <a href="https://www.tedxbreckenridge.com/volunteer/" target="_blank" style="color: #4A7470; text-decoration: underline;">Volunteer Form</a>.
+                            </p>
 
                             <!-- Sign off -->
                             <p style="margin: 0 0 24px 0; font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.6; color: #2A2A2A;">
