--- a/_print/2026-01-salon-slides.html
+++ b/_print/2026-01-salon-slides.html
@@ -266,7 +266,7 @@ format: "1920x1080 Slides"
       content: '';
       position: absolute;
       left: 0;
-      top: 18px;
+      top: 24px;
       width: 24px;
       height: 4px;
       background: var(--ted-red);
@@ -560,7 +560,33 @@ format: "1920x1080 Slides"
     </div>
   </div>
 
-  <!-- Slide 3: What is a TEDx Salon? -->
+  <!-- Slide 3: Volunteer Needs -->
+  <div class="slide slide--dark">
+    <div class="slide__content">
+      <div class="slide__split slide__split--reverse">
+        <div class="slide__split-content">
+          <div class="section-header">
+            <h2 class="section-header__title">We Need Your Help</h2>
+            <p class="section-header__subtitle">Top volunteer needs for 2026</p>
+          </div>
+          <ul class="content-list">
+            <li>Photography — capture our Salon and main events</li>
+            <li>Salon event coordination — help plan intimate gatherings</li>
+            <li>Accounting &amp; bookkeeping — keep our finances on track</li>
+            <li>2026 main event team — production, speakers, logistics</li>
+          </ul>
+        </div>
+        <div class="slide__split-image">
+          <img src="/assets/images/blog/volunteer-team-stage.jpg" alt="TEDxBreckenridge volunteers celebrating on stage">
+        </div>
+      </div>
+    </div>
+    <div class="slide-footer">
+      <img src="/assets/images/logos/tedxbreckenridge-evergreen-logo-white.png" alt="" class="slide-footer__logo">
+    </div>
+  </div>
+
+  <!-- Slide 4: What is a TEDx Salon? -->
   <div class="slide slide--dark">
     <div class="slide__content">
       <div class="slide__split slide__split--reverse">
@@ -586,7 +612,7 @@ format: "1920x1080 Slides"
     </div>
   </div>
 
-  <!-- Slide 4: Agenda -->
+  <!-- Slide 5: Agenda -->
   <div class="slide slide--dark">
     <div class="slide__content">
       <div class="slide__split">
@@ -610,7 +636,7 @@ format: "1920x1080 Slides"
     </div>
   </div>
 
-  <!-- Slide 5: Speaker Bio -->
+  <!-- Slide 6: Speaker Bio -->
   <div class="slide slide--dark slide--speaker">
     <div class="slide__background" style="background-image: url('/assets/images/heroes/salon-cutting-board.jpg');"></div>
     <div class="slide__overlay slide__overlay--warm"></div>
@@ -633,7 +659,7 @@ format: "1920x1080 Slides"
     </div>
   </div>
 
-  <!-- Slide 6: Community Questions -->
+  <!-- Slide 7: Community Questions -->
   <div class="slide slide--dark">
     <div class="slide__content">
       <div class="section-header">
@@ -672,7 +698,7 @@ format: "1920x1080 Slides"
     </div>
   </div>
 
-  <!-- Slide 7: Call to Action -->
+  <!-- Slide 8: Call to Action -->
   <div class="slide slide--dark slide--cta">
     <div class="slide__content">
       <p class="cta-message">Together, let's build a community where ideas inspire action.</p>
