Add preview text.

--- a/_emails/0000-00-template.html
+++ b/_emails/0000-00-template.html
@@ -2,6 +2,7 @@
 title: "General Email Template"
 date: 2025-01-01
 subject: "Your subject line here"
+preview_text: "Preview text shown in inbox (under subject line)"
 description: "Reusable template for quick emails"
 ---
 <!DOCTYPE html>
