--- a/_emails/2026-01-salon-elevated-cuisine.html
+++ b/_emails/2026-01-salon-elevated-cuisine.html
@@ -2,6 +2,7 @@
 title: "TEDxBreckenridge Salon: Elevated Cuisine (Jan 15)"
 date: 2026-01-01
 subject: "You're invited — TEDxBreckenridge Salon Jan 15"
+preview_text: "Join us for a TEDxBreckenridge Salon exploring the science and art of cooking at altitude."
 description: "Salon event invitation for Elevated Cuisine"
 ---
 <!DOCTYPE html>
