Fix address line collapsing.

--- a/_emails/2026-01-salon-elevated-cuisine.html
+++ b/_emails/2026-01-salon-elevated-cuisine.html
@@ -260,7 +260,7 @@ description: "Salon event invitation for Elevated Cuisine"
                                 *|IF:LIST|*You're receiving this email because you signed up for updates from TEDxBreckenridge.*|END:IF|*<br>
                                 <a href="*|UPDATE_PROFILE|*" target="_blank" style="color: #5B8E8E; text-decoration: underline;">Update your preferences</a> or <a href="*|UNSUB|*" target="_blank" style="color: #5B8E8E; text-decoration: underline;">unsubscribe</a>
                             </p>
-                            <p style="margin: 16px 0 0 0; font-family: Helvetica, Arial, sans-serif; font-size: 12px; line-height: 1.5; color: #6B6B6B;">
+                            <p style="margin: 16px 0 0 0; font-family: Helvetica, Arial, sans-serif; font-size: 12px; line-height: 1.5; color: #6B6B6B; white-space: pre-line;">
                                 *|LIST:ADDRESS|*
                             </p>
                         </td>
