Add static check to validate all ticketsauce links have affiliate tracking.

--- a/_print/2026-01-salon-flyer.html
+++ b/_print/2026-01-salon-flyer.html
@@ -153,8 +153,8 @@ format: "8.5 x 11 Flyer"
         <h1 class="title">Elevated Cuisine: The Science and Art of Cooking at Altitude</h1>
       </div>
       <div class="footer">
-<!-- QR code generated from: https://api.qrserver.com/v1/create-qr-code/?size=510x510&data=https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude -->
-        <img src="/assets/images/qr-codes/salon-2026-01-cooking-at-altitude.png" alt="Get Tickets" class="qr-code">
+<!-- QR code generated from: https://api.qrserver.com/v1/create-qr-code/?size=510x510&data=https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate%26utm_name=Flyer-(flour)-QR-Code%26utm_campaign=Flyer-(flour)-QR-Code%26utm_id=695880e44970490ca31f26f40a1e61ed -->
+        <img src="/assets/images/qr-codes/salon-2026-01-cooking-at-altitude-flour.png" alt="Get Tickets" class="qr-code">
         <div class="details">
           <div class="date">Thursday, January 15th</div>
           <div>EVO3 Workspace, Frisco, CO</div>
