Add unique affiliate links on the website and emails.

--- a/_emails/2026-01-salon-elevated-cuisine.html
+++ b/_emails/2026-01-salon-elevated-cuisine.html
@@ -113,7 +113,7 @@ description: "Salon event invitation for Elevated Cuisine"
                                                         <a href="https://www.google.com/maps/search/?api=1&query=620+E+Main+St+%236+Frisco+CO+80443" target="_blank" style="color: #4A7470; text-decoration: underline;">EVO3 Workspace — Frisco, CO</a><br>
                                                         Suggested donation: $10
                                                     </p>
-                                                    <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com&utm_campaign=tedxbreckenridge.com&utm_id=695827faa4044dcbae486ce50a1e63a3" target="_blank" style="display: inline-block; padding: 10px 20px; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: bold; color: #FFFFFF; background-color: #e62b1e; text-decoration: none; border-radius: 4px;">Get Tickets</a>
+                                                    <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=email-jan-salon-infobox&utm_campaign=email-jan-salon-infobox&utm_id=6958833fdee449adbaaa00300a1e63f9" target="_blank" style="display: inline-block; padding: 10px 20px; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: bold; color: #FFFFFF; background-color: #e62b1e; text-decoration: none; border-radius: 4px;">Get Tickets</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -161,13 +161,13 @@ description: "Salon event invitation for Elevated Cuisine"
                                 <tr>
                                     <td align="center">
                                         <!--[if mso]>
-                                        <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com&utm_campaign=tedxbreckenridge.com&utm_id=695827faa4044dcbae486ce50a1e63a3" style="height:50px;v-text-anchor:middle;width:200px;" arcsize="8%" strokecolor="#e62b1e" fillcolor="#e62b1e">
+                                        <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=email-jan-salon-cta&utm_campaign=email-jan-salon-cta&utm_id=6958836cfc1c42c79d124aae0a1e6121" style="height:50px;v-text-anchor:middle;width:200px;" arcsize="8%" strokecolor="#e62b1e" fillcolor="#e62b1e">
                                         <w:anchorlock/>
                                         <center style="color:#ffffff;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:bold;">Reserve Your Spot</center>
                                         </v:roundrect>
                                         <![endif]-->
                                         <!--[if !mso]><!-->
-                                        <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com&utm_campaign=tedxbreckenridge.com&utm_id=695827faa4044dcbae486ce50a1e63a3" target="_blank" style="display: inline-block; padding: 16px 32px; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: bold; color: #FFFFFF; background-color: #e62b1e; text-decoration: none; border-radius: 4px;">
+                                        <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=email-jan-salon-cta&utm_campaign=email-jan-salon-cta&utm_id=6958836cfc1c42c79d124aae0a1e6121" target="_blank" style="display: inline-block; padding: 16px 32px; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: bold; color: #FFFFFF; background-color: #e62b1e; text-decoration: none; border-radius: 4px;">
                                             Reserve Your Spot
                                         </a>
                                         <!--<![endif]-->
