--- a/website/index.html
+++ b/website/index.html
@@ -26,7 +26,7 @@ permalink: /
             </div>
         </div>
         <div class="hero-actions">
-            <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com&utm_campaign=tedxbreckenridge.com&utm_id=695827faa4044dcbae486ce50a1e63a3" class="btn btn-primary">Get Tickets</a>
+            <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com-homepage-hero&utm_campaign=tedxbreckenridge.com-homepage-hero&utm_id=69588292d2f8406db61a64eb0a1e6277" class="btn btn-primary">Get Tickets</a>
             <a href="/salon/" class="btn btn-secondary">Learn More</a>
         </div>
     </div>
