--- a/website/salon.html
+++ b/website/salon.html
@@ -52,7 +52,7 @@ redirect_from: /salons/
                     <em>Ideas should be accessible to everyone. If cost is a barrier, join us anyway — your curiosity matters most.</em></p>
                 </div>
                 <div class="btn-group mt-32">
-                    <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com&utm_campaign=tedxbreckenridge.com&utm_id=695827faa4044dcbae486ce50a1e63a3" class="btn btn-primary">Get Tickets</a>
+                    <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com-salon-hero&utm_campaign=tedxbreckenridge.com-salon-hero&utm_id=695882c410004d1cb39430930a1e60f8" class="btn btn-primary">Get Tickets</a>
                     <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=TEDxBreckenridge+Salon:+Elevated+Cuisine&dates=20260115T180000/20260115T200000&details=Explore+how+altitude+changes+the+rules+of+cooking+and+baking+with+the+culinary+team+from+Colorado+Mountain+College.&location=EVO3+Workspace,+620+E+Main+St+%236,+Frisco,+CO+80443&sf=true&output=xml" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Add to Calendar</a>
                 </div>
             </div>
@@ -75,7 +75,7 @@ redirect_from: /salons/
                 <p>Explore how altitude changes the rules of cooking and baking with the culinary team from Colorado Mountain College.</p>
                 <p class="text-stone card-meta"><strong>January 15, 2026 • 6:00 PM</strong><br>EVO3 Workspace, Frisco</p>
                 <div class="mt-24">
-                    <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com&utm_campaign=tedxbreckenridge.com&utm_id=695827faa4044dcbae486ce50a1e63a3" class="btn btn-primary">Get Tickets</a>
+                    <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude?utm_source=affiliate&utm_name=tedxbreckenridge.com-salon-schedule&utm_campaign=tedxbreckenridge.com-salon-schedule&utm_id=6958831a55f442e1b25c00300a1e63f9" class="btn btn-primary">Get Tickets</a>
                 </div>
             </div>
 
