--- a/print/index.html
+++ b/print/index.html
@@ -9,127 +9,49 @@ sitemap: false
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Print Materials | TEDxBreckenridge</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
   <style>
-    :root {
-      /* Core TED Brand */
-      --ted-red: #e4291c;
-      --ted-red-dark: #C70022;
-      --black: #000;
-      --white: #FFF;
+    /* Minimal overrides for internal tools page */
+    .nav-menu { display: none; }
 
-      /* Evergreen Palette */
-      --teal: #3F6F6F;
-      --forest: #4A7470;
-      --charcoal: #2A2A2A;
-      --stone: #676767;
-      --cream: #F9F7F4;
-      --sand: #E8E6E3;
-      --teal-light: #A3C4C4;
-
-      /* Typography */
-      --font-primary: 'Helvetica Neue', helvetica, inter, arial, sans-serif;
+    .internal-footer {
+      background: var(--black);
+      color: var(--white);
+      padding: 40px 48px;
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    html {
-      scroll-behavior: smooth;
-    }
-
-    body {
-      font-family: var(--font-primary);
-      font-weight: 400;
-      background: var(--white);
-      color: var(--black);
-      line-height: 1.6;
-    }
-
-    /* Navigation - matches main site */
-    .nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 100;
-      padding: 20px 48px;
+    .internal-footer-content {
+      max-width: 1400px;
+      margin: 0 auto;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background: var(--white);
-      transition: box-shadow 0.3s ease;
     }
 
-    .nav.scrolled {
-      box-shadow: 0 1px 0 rgb(0 0 0 / 8%);
-    }
-
-    .nav-logo {
-      display: flex;
-      align-items: center;
-      line-height: 0;
-      text-decoration: none;
-    }
-
-    .nav-logo img {
-      height: 40px;
-      width: auto;
-      display: block;
-      vertical-align: middle;
-      position: relative;
-      top: 2px;
-    }
-
-    /* Main Content */
-    main {
-      padding-top: 80px;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .page-header {
-      background: var(--cream);
-      padding: 80px 24px;
-      text-align: center;
-    }
-
-    .page-title {
-      font-family: var(--font-primary);
-      font-size: clamp(32px, 5vw, 48px);
+    .internal-footer-link {
+      font-size: 13px;
       font-weight: 400;
-      line-height: 1.2;
-      letter-spacing: -0.02em;
-      color: var(--black);
-      max-width: 800px;
-      margin: 0 auto;
+      color: rgb(255 255 255 / 80%);
+      text-decoration: none;
+      border-bottom: none;
+      transition: color 0.2s ease;
     }
 
-    .page-subtitle {
-      font-size: 1.25rem;
-      line-height: 1.5;
-      color: var(--stone);
-      max-width: 600px;
-      margin: 16px auto 0;
+    .internal-footer-link:hover {
+      color: var(--white);
     }
 
-    /* Print List */
-    .print-list-container {
-      flex: 1;
-      padding: 48px 48px 80px;
-      max-width: 720px;
-      margin: 0 auto;
-      width: 100%;
+    .internal-footer-note {
+      font-size: 12px;
+      color: rgb(255 255 255 / 60%);
     }
 
+    /* Print list styles */
     .print-list {
       list-style: none;
+      max-width: 720px;
+      margin: 0 auto;
+      padding: 48px 48px 80px;
     }
 
     .print-item + .print-item {
@@ -140,6 +62,11 @@ sitemap: false
       display: block;
       padding: 32px 0;
       text-decoration: none;
+      border-bottom: none;
+      color: inherit;
+    }
+
+    .print-link:hover {
       color: inherit;
     }
 
@@ -182,7 +109,6 @@ sitemap: false
       margin-top: 12px;
     }
 
-    /* Empty State */
     .empty-state {
       text-align: center;
       padding: 80px 20px;
@@ -203,104 +129,8 @@ sitemap: false
       font-size: 14px;
     }
 
-    /* Footer */
-    .footer {
-      background: var(--black);
-      color: var(--white);
-      padding: 40px 48px;
-    }
-
-    .footer-content {
-      max-width: 1400px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .footer-link {
-      font-size: 13px;
-      font-weight: 400;
-      color: rgb(255 255 255 / 80%);
-      text-decoration: none;
-      transition: color 0.2s ease;
-    }
-
-    .footer-link:hover {
-      color: var(--white);
-    }
-
-    .footer-note {
-      font-size: 12px;
-      color: rgb(255 255 255 / 60%);
-    }
-
-    /* Logo light/dark mode visibility */
-    .logo-light {
-      display: block;
-    }
-
-    .logo-dark {
-      display: none;
-    }
-
-    /* Dark Mode */
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --white: #121212;
-        --black: #FFF;
-        --cream: #1E1E1E;
-        --sand: #252525;
-        --charcoal: #E8E6E3;
-        --stone: #A0A0A0;
-        --teal: #5A9A9A;
-        --teal-light: #3D5858;
-      }
-
-      .logo-light {
-        display: none;
-      }
-
-      .logo-dark {
-        display: block;
-      }
-
-      .nav.scrolled {
-        box-shadow: 0 1px 0 rgb(255 255 255 / 8%);
-      }
-
-      .print-format {
-        background: #252525;
-      }
-
-      .empty-state code {
-        background: #252525;
-      }
-
-      .footer {
-        background: #000;
-      }
-    }
-
-    /* Mobile */
     @media (max-width: 768px) {
-      .nav {
-        padding: 16px 24px;
-      }
-
-      .nav-logo img {
-        height: 32px;
-      }
-
-      main {
-        padding-top: 64px;
-      }
-
-      .page-header {
-        padding: 60px 24px;
-      }
-
-      .print-list-container {
+      .print-list {
         padding: 32px 24px 60px;
       }
 
@@ -312,66 +142,70 @@ sitemap: false
         font-size: 18px;
       }
 
-      .footer {
+      .internal-footer {
         padding: 32px 24px;
       }
 
-      .footer-content {
+      .internal-footer-content {
         flex-direction: column;
         gap: 12px;
         text-align: center;
       }
     }
+
+    @media (prefers-color-scheme: dark) {
+      .internal-footer {
+        background: #000;
+      }
+    }
   </style>
 </head>
 <body>
-  <nav class="nav" id="nav">
+  <nav class="nav" id="nav" role="navigation">
     <a href="/" class="nav-logo">
-      <img src="/assets/images/logos/tedx-breckenridge-logo-black.png" alt="TEDxBreckenridge" class="logo-light">
-      <img src="/assets/images/logos/tedx-breckenridge-logo-white.png" alt="TEDxBreckenridge" class="logo-dark">
+      <img src="{{ '/assets/images/logos/tedx-breckenridge-logo-black.png' | relative_url }}" alt="TEDxBreckenridge" class="logo-light">
+      <img src="{{ '/assets/images/logos/tedx-breckenridge-logo-white.png' | relative_url }}" alt="TEDxBreckenridge" class="logo-dark">
     </a>
   </nav>
 
-  <main>
+  <main class="page">
     <div class="page-header">
       <h1 class="page-title">Print Materials</h1>
       <p class="page-subtitle">Preview and export print-ready HTML for flyers, handouts, and programs</p>
     </div>
 
-    <div class="print-list-container">
-      {% if site.print %}
-      {% assign sorted_print = site.print | sort: 'date' | reverse %}
-      {% endif %}
-      {% if sorted_print and sorted_print.size > 0 %}
-      <ul class="print-list">
-        {% for item in sorted_print %}
-        <li class="print-item">
-          <a href="{{ item.url }}" class="print-link">
-            <div class="print-date">{{ item.date | date: "%B %d, %Y" }}</div>
-            <h2 class="print-title">{{ item.title }}</h2>
-            {% if item.description %}
-            <div class="print-description">{{ item.description }}</div>
-            {% endif %}
-            {% if item.format %}
-            <span class="print-format">{{ item.format }}</span>
-            {% endif %}
-          </a>
-        </li>
-        {% endfor %}
-      </ul>
-      {% else %}
-      <div class="empty-state">
-        <h2>No print materials yet</h2>
-        <p>Add print templates to <code>_print/</code></p>
-      </div>
-      {% endif %}
+    {% if site.print %}
+    {% assign sorted_print = site.print | sort: 'date' | reverse %}
+    {% endif %}
+    {% if sorted_print and sorted_print.size > 0 %}
+    <ul class="print-list">
+      {% for item in sorted_print %}
+      <li class="print-item">
+        <a href="{{ item.url }}" class="print-link">
+          <div class="print-date">{{ item.date | date: "%B %d, %Y" }}</div>
+          <h2 class="print-title">{{ item.title }}</h2>
+          {% if item.description %}
+          <div class="print-description">{{ item.description }}</div>
+          {% endif %}
+          {% if item.format %}
+          <span class="print-format">{{ item.format }}</span>
+          {% endif %}
+        </a>
+      </li>
+      {% endfor %}
+    </ul>
+    {% else %}
+    <div class="empty-state">
+      <h2>No print materials yet</h2>
+      <p>Add print templates to <code>_print/</code></p>
     </div>
+    {% endif %}
   </main>
 
-  <footer class="footer">
-    <div class="footer-content">
-      <a href="/" class="footer-link">Back to website</a>
-      <span class="footer-note">Development only - Not deployed to production</span>
+  <footer class="internal-footer">
+    <div class="internal-footer-content">
+      <a href="/" class="internal-footer-link">← Back to website</a>
+      <span class="internal-footer-note">Development only · Not deployed to production</span>
     </div>
   </footer>
 
